# themlsbook.github.io

./: .buildinfo  .gitignore  CNAME  Readme.md  _config.yml  _toc.yml  bagging.ipynb  boosting.ipynb  evaluation_class.ipynb  evaluation_reg.ipynb  genindex.html  index.html  logistic_regression.ipynb  objects.inv  pyproject.toml  search.html  searchindex.js  svm.ipynb  tuning.ipynb
_build/.doctrees/: environment.pickle
_build/.jupyter_cache/: global.db
_build/html/: .buildinfo  _toc.yml  genindex.html  objects.inv  search.html  searchindex.js
_sources/: index.md
book/: index.html
chapter10/: index.html  logistic_regression.html
chapter11/: index.html  svm.html
chapter12/: index.html  tuning.html
chapter13/: evaluation_class.html  evaluation_class.md  evaluation_reg.html  index.html
chapter2/: index.html  knn.html
chapter3/: cost_function.html  cost_function.md  gradient_descent.html  index.html  linear_regression.html
chapter4/: basis_expansion.html  index.html  regularization.html
chapter5/: bias_variance_decomposition.html  index.html  index.md  validation_methods.html
chapter6/: filter_methods.html  filter_methods.md  index.html  search_methods.html  wrapper_methods.html
chapter7/: data_augmentation.html  data_augmentation.md  data_cleaning.html  data_cleaning.md  feature_transformation.html  feature_transformation.md  index.html  index.md
chapter8/: decision_tree_classifier.html  decision_tree_classifier.md  decision_tree_regressor.html  index.html
chapter9/: bagging.html  boosting.html  index.html
mlsbook/: _toc.yml
(+110 files in other folders)
