[tool.poetry]
name = "themlsbook-github-io"
version = "0.1.0"
description = ""
authors = ["5x12 <contact@awolf.io>"]
readme = "README.md"
packages = [{include = "themlsbook"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
